@startuml Dashboard Domain Model

class Dashboard <<AggregateRoot>> {
    +Guid DashboardId
    +string DashboardName
    +Guid ProfileId
    +Guid AccountId
    +bool IsDefault
    +LayoutType Layout
    +Guid CreatedBy
    --
    +Create(): Dashboard
    +Update(): void
    +Clone(): Dashboard
    +SetAsDefault(): void
    +Share(): void
    +AddCard(): void
    +RemoveCard(): void
}

class DashboardCard <<Entity>> {
    +Guid CardId
    +Guid DashboardId
    +string CardType
    +CardPosition Position
    +string Configuration
}

class CardPosition <<ValueObject>> {
    +int Row
    +int Column
    +int Width
    +int Height
}

enum LayoutType {
    Grid
    Masonry
    Freeform
}

Dashboard "1" *-- "many" DashboardCard
DashboardCard --> CardPosition

@enduml
